--- a/Laboratorio2P3/src/main/webapp/style.css
+++ b/Laboratorio2P3/src/main/webapp/style.css
@@ -77,7 +77,7 @@ body {
     width: 100%;
     padding: 40px;
     position: absolute;
-    background: #191919;
+    background: black;
     top: 30%;
     left: 30%;
     border-radius: 5px;
@@ -87,7 +87,7 @@ body {
 .table2{
     width: 100%;
     padding: 40px;
-    background: #191919;
+    background: black;
     border-radius: 5px;
     text-align: center;
     margin-top: 10%;
